tests/snapshots/integration__integration_tests__post_create_commands__post_create_git_variables_template.snap
---
source: tests/integration_tests/post_create_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
    - "--yes"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMON_DIR: ""
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_DIR: ""
    GIT_EDITOR: ""
    GIT_INDEX_FILE: ""
    GIT_OBJECT_DIRECTORY: ""
    GIT_TERMINAL_PROMPT: "0"
    GIT_WORK_TREE: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    MOCK_CONFIG_DIR: "[MOCK_CONFIG_DIR]"
    NO_COLOR: ""
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[33m▲[39m [33mProject config: table form for [1mpre-create[22m is deprecated in favor of the pipeline form. We're unifying pre-hooks, post-hooks, and aliases so that list form always runs serially and table form always runs in parallel — migrate now to keep the current serial behavior once the table form is repurposed.[39m
[2m↳[22m [2mTo see details, run [4mwt config show[24m; to apply updates, run [4mwt config update[24m[22m
[36m◎[39m [36mRunning pre-create [1mproject:commit[22m @ [1m_REPO_.feature[22m[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Commit: 5df3ac9912c6b9de24c353a5fc6f04017a174f61'[0m[2m [0m[2m[36m>[0m[2m git_vars.txt
[0m[36m◎[39m [36mRunning pre-create [1mproject:short[22m @ [1m_REPO_.feature[22m[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Short: 5df3ac9'[0m[2m [0m[2m[36m>>[0m[2m git_vars.txt
[0m[36m◎[39m [36mRunning pre-create [1mproject:remote[22m @ [1m_REPO_.feature[22m[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Remote: origin'[0m[2m [0m[2m[36m>>[0m[2m git_vars.txt
[0m[36m◎[39m [36mRunning pre-create [1mproject:worktree_name[22m @ [1m_REPO_.feature[22m[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Worktree Name: repo.feature'[0m[2m [0m[2m[36m>>[0m[2m git_vars.txt
[0m[32m✓[39m [32mCreated branch [1mfeature[22m from [1mmain[22m and worktree @ [1m_REPO_.feature[22m[39m
[2m↳[22m [2mTo customize worktree locations, run [4mwt config create[24m[22m
[33m▲[39m [33mCannot change directory — shell integration not installed[39m
[2m↳[22m [2mTo enable automatic cd, run [4mwt config shell install[24m[22m
